--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<link rel="shortcut icon" href="" type="image/x-icon">
 	<link rel="icon" href="" type="image/x-icon">
-	<title>Nilinde &#8211; Android App</title>
+	<title>Sports App</title>
 	<meta name='robots' content='noindex,follow' />
 	<link rel="alternate" type="application/rss+xml" title="Android &raquo; Feed" href="#" />
 	<link rel="alternate" type="application/rss+xml" title="Android &raquo; Comments Feed" href="#" />
@@ -575,7 +575,7 @@
                     to refuse our cookies, you may not be able to use some portions of this Service.
                   </p> <p><strong>Service Providers</strong></p> <p> I may employ third-party companies and individuals due to the following reasons:</p> <ul><li>To facilitate our Service;</li> <li>To provide the Service on our behalf;</li> <li>To perform Service-related services; or</li> <li>To assist us in analyzing how our Service is used.</li></ul> <p> I want to inform users of this Service that these third parties have access to
                     your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However,
-                    they are obligated not to disclose or use the information for any other purpose.
+                    they are obligated not to disclose or use the information for any other purpose. We offer premium services to be used on different platforms such as betika.co.ke
                   </p> <p><strong>Security</strong></p> <p> I value your trust in providing us your Personal Information, thus we are striving
                     to use commercially acceptable means of protecting it. But remember that no method of transmission over
                     the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee
